traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:30: error: expected class or object definition
def gauche() : Boolean = {
^TraversalZigZag:37: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:40: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:43: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:46: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:49: error: Unmatched closing brace '}' ignored here
}
^